    - we only auto-overwrite a paren/bracket if it's currently magic
    - we DO auto-insert if preceding a nonmagic close-paren/brace
    - we highlight magic parens with `js2-magic-paren-face'
    - auto-overwriting a magic delimiter makes it nonmagic
  - we no longer auto-insert a close-curly if the next non-whitespace
    character in the buffer is a close-curly with an error overlay.

Since 2008330:

  - fixed broken installation instructions

  - added `js2-language-version' custom variable that defaults
    to 150, for JavaScript 1.5.  If you set it to 160, you get
    E4X support, and 170 adds let, yield, and array comprehensions.

  - added new warning for missing semicolon (auto-insertion)
    - configured via js2-strict-missing-semi-warning

  - fixed default indentation for first line of an object
    literal being passed as the first parameter to a function:
    most people want this indented from previous line, not
    from the curly-brace.  Example:

	foo.bar.baz({
          a: 1     // most people want this line indented here

  - improved the heuristics for deciding whether to insert a
    close-paren or close-bracket when sitting on one.  It's
    still not very smart, but it's less annoying than it was.

New for 20080401 release:

  * fixed problem where indenting after line with /"/ regexp always indented to column 0.  It's still not perfect, but at least it invokes the bounce-indenter now.
    
  * fixed hitting Enter after /** in already-terminated block comment.  It was trying to terminate the comment again. Now it will only insert the terminator if it's currently a parse error (it assumes the error is an unterminated comment.)
    
  * added yield into the keyword lists (was inadvertently omitted)

  * per user request, made bounce-indent not record undo info

  * added highlighting for simple html start/end tags in jsdoc

  * don't do single-quote-matching inside comments, since typing an apostrophe is the most common case.
    